# Slicky

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: copy-excalidraw-assets.mjs  generate_icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  obsidian.rs  screenshot_watcher.rs  shortcut.rs  storage.rs  triple_click.rs  window_ops.rs
src/components/: DiagramWindow.tsx  FloatingExplanation.tsx  History.tsx  Markdown.tsx  Settings.tsx  SlicklyLogo.tsx  SlickyLogo.tsx
src/lib/: capture.ts  diagram.ts  mermaidScene.ts  openai.ts  storage.ts
src/lib/__tests__/: diagram.test.ts  openai.test.ts
