[package]
name = "slicky"
version = "0.1.0"
description = "Slicky — instant AI explanations of anything on your screen"
authors = ["Slicky"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "slicky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
device_query = "4.0.1"

# macOS-specific: used to call NSApp.activate(...) so the floating popup
# surfaces above the user's frontmost app. Without this, Slicky's window
# stays "behind" whatever the user is working in even with always-on-top.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
